--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,13 @@
       // ],
       "store": [
         "projects/store/src/public-api.ts"
+      ],
+      // "object-pool": [
+      //   "dist/object-pool/object-pool",
+      //   "dist/object-pool"
+      // ]
+      "object-pool": [
+        "projects/object-pool/src/public-api.ts"
       ]
     }
   },
