add object-pool; add differs;

--- a/angular.json
+++ b/angular.json
@@ -326,6 +326,46 @@
           }
         }
       }
+    },
+    "differs": {
+      "projectType": "library",
+      "root": "projects/differs",
+      "sourceRoot": "projects/differs/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/differs/tsconfig.lib.json",
+            "project": "projects/differs/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/differs/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/differs/src/test.ts",
+            "tsConfig": "projects/differs/tsconfig.spec.json",
+            "karmaConfig": "projects/differs/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/differs/tsconfig.lib.json",
+              "projects/differs/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }},
   "defaultProject": "dynamic-components"
 }
