add dynamic lib

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "//object-pool": "//",
+    "// lib object-pool": "//",
     "test:object-pool": "ng test object-pool",
-    "//dynamic-components": "//",
+    "// lib differs": "//",
+    "test:differs": "ng test differs",
+    "// dynamic-components": "//",
     "start:dynamic-components": "ng serve dynamic-components",
     "build:dynamic-components": "ng build dynamic-components",
-    "//lib": "//",
+    "// lib store": "//",
     "start:store": "ng build store --watch",
     "build:store": "ng build store"
   },
