--- a/angular.json
+++ b/angular.json
@@ -126,127 +126,6 @@
         }
       }
     },
-    "dynamic": {
-      "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "style": "scss"
-        }
-      },
-      "root": "projects/dynamic",
-      "sourceRoot": "projects/dynamic/src",
-      "prefix": "app",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist/dynamic",
-            "index": "projects/dynamic/src/index.html",
-            "main": "projects/dynamic/src/main.ts",
-            "polyfills": "projects/dynamic/src/polyfills.ts",
-            "tsConfig": "projects/dynamic/tsconfig.app.json",
-            "aot": true,
-            "assets": [
-              "projects/dynamic/src/favicon.ico",
-              "projects/dynamic/src/assets"
-            ],
-            "styles": [
-              "projects/dynamic/src/styles.scss"
-            ],
-            "scripts": []
-          },
-          "configurations": {
-            "production": {
-              "fileReplacements": [
-                {
-                  "replace": "projects/dynamic/src/environments/environment.ts",
-                  "with": "projects/dynamic/src/environments/environment.prod.ts"
-                }
-              ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "extractCss": true,
-              "namedChunks": false,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
-                }
-              ]
-            }
-          }
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "dynamic:build"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "dynamic:build:production"
-            }
-          }
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "dynamic:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/dynamic/src/test.ts",
-            "polyfills": "projects/dynamic/src/polyfills.ts",
-            "tsConfig": "projects/dynamic/tsconfig.spec.json",
-            "karmaConfig": "projects/dynamic/karma.conf.js",
-            "assets": [
-              "projects/dynamic/src/favicon.ico",
-              "projects/dynamic/src/assets"
-            ],
-            "styles": [
-              "projects/dynamic/src/styles.scss"
-            ],
-            "scripts": []
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/dynamic/tsconfig.app.json",
-              "projects/dynamic/tsconfig.spec.json",
-              "projects/dynamic/e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "projects/dynamic/e2e/protractor.conf.js",
-            "devServerTarget": "dynamic:serve"
-          },
-          "configurations": {
-            "production": {
-              "devServerTarget": "dynamic:serve:production"
-            }
-          }
-        }
-      }
-    },
     "store": {
       "projectType": "library",
       "root": "projects/store",
@@ -359,6 +238,46 @@
             "tsConfig": [
               "projects/differs/tsconfig.lib.json",
               "projects/differs/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "dynamic": {
+      "projectType": "library",
+      "root": "projects/dynamic",
+      "sourceRoot": "projects/dynamic/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/dynamic/tsconfig.lib.json",
+            "project": "projects/dynamic/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/dynamic/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/dynamic/src/test.ts",
+            "tsConfig": "projects/dynamic/tsconfig.spec.json",
+            "karmaConfig": "projects/dynamic/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/dynamic/tsconfig.lib.json",
+              "projects/dynamic/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
