--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,16 +32,23 @@
       // "object-pool": [
       //   "dist/object-pool/object-pool",
       //   "dist/object-pool"
-      // ]
+      // ],
       "object-pool": [
         "projects/object-pool/src/public-api.ts"
       ],
       // "differs": [
       //   "dist/differs/differs",
       //   "dist/differs"
-      // ]
+      // ],
       "differs": [
-        "projects/differs/src/public-api.ts",
+        "projects/differs/src/public-api.ts"
+      ],
+      // "dynamic": [
+      //   "dist/dynamic/dynamic",
+      //   "dist/dynamic"
+      // ],
+      "dynamic": [
+        "projects/dynamic/src/public-api.ts"
       ]
     }
   },
