add doc-viewer lib

--- a/angular.json
+++ b/angular.json
@@ -285,6 +285,46 @@
           }
         }
       }
+    },
+    "doc-viewer": {
+      "projectType": "library",
+      "root": "projects/doc-viewer",
+      "sourceRoot": "projects/doc-viewer/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/doc-viewer/tsconfig.lib.json",
+            "project": "projects/doc-viewer/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/doc-viewer/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/doc-viewer/src/test.ts",
+            "tsConfig": "projects/doc-viewer/tsconfig.spec.json",
+            "karmaConfig": "projects/doc-viewer/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/doc-viewer/tsconfig.lib.json",
+              "projects/doc-viewer/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
     }},
   "defaultProject": "dynamic-components"
 }
