--- a/angular.json
+++ b/angular.json
@@ -84,12 +84,11 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/jest:run",
           "options": {
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -194,11 +193,10 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/jest:run",
           "options": {
             "main": "projects/store/src/test.ts",
-            "tsConfig": "projects/store/tsconfig.spec.json",
-            "karmaConfig": "projects/store/karma.conf.js"
+            "tsconfig": "projects/store/tsconfig.spec.json"
           }
         },
         "lint": {
@@ -234,11 +232,10 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/jest:run",
           "options": {
             "main": "projects/object-pool/src/test.ts",
-            "tsConfig": "projects/object-pool/tsconfig.spec.json",
-            "karmaConfig": "projects/object-pool/karma.conf.js"
+            "tsConfig": "projects/object-pool/tsconfig.spec.json"
           }
         },
         "lint": {
@@ -274,11 +271,10 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/jest:run",
           "options": {
             "main": "projects/differs/src/test.ts",
-            "tsConfig": "projects/differs/tsconfig.spec.json",
-            "karmaConfig": "projects/differs/karma.conf.js"
+            "tsConfig": "projects/differs/tsconfig.spec.json"
           }
         },
         "lint": {
@@ -314,11 +310,10 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/jest:run",
           "options": {
             "main": "projects/dynamic/src/test.ts",
-            "tsConfig": "projects/dynamic/tsconfig.spec.json",
-            "karmaConfig": "projects/dynamic/karma.conf.js"
+            "tsConfig": "projects/dynamic/tsconfig.spec.json"
           }
         },
         "lint": {
@@ -354,11 +349,10 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/jest:run",
           "options": {
             "main": "projects/doc-viewer/src/test.ts",
-            "tsConfig": "projects/doc-viewer/tsconfig.spec.json",
-            "karmaConfig": "projects/doc-viewer/karma.conf.js"
+            "tsConfig": "projects/doc-viewer/tsconfig.spec.json"
           }
         },
         "lint": {
@@ -394,11 +388,10 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/jest:run",
           "options": {
             "main": "projects/custom-element/src/test.ts",
-            "tsConfig": "projects/custom-element/tsconfig.spec.json",
-            "karmaConfig": "projects/custom-element/karma.conf.js"
+            "tsConfig": "projects/custom-element/tsconfig.spec.json"
           }
         },
         "lint": {
@@ -434,11 +427,10 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular-builders/jest:run",
           "options": {
             "main": "projects/research/src/test.ts",
-            "tsConfig": "projects/research/tsconfig.spec.json",
-            "karmaConfig": "projects/research/karma.conf.js"
+            "tsconfig": "projects/research/tsconfig.spec.json"
           }
         },
         "lint": {
