--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^10.0.1",
     "@angular-devkit/build-angular": "~0.1000.5",
     "@angular-devkit/build-ng-packagr": "~0.1000.5",
     "@angular/cli": "~10.0.5",
@@ -54,22 +55,17 @@
     "@angular/language-service": "~10.0.7",
     "@nguniversal/builders": "^9.0.0",
     "@types/express": "^4.17.6",
-    "@types/jasmine": "~3.5.4",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^26.0.19",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "glob": "^7.1.6",
+    "jest": "^26.6.3",
+    "jest-preset-angular": "^8.3.2",
     "ng-packagr": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "protractor": "~7.0.0",
-    "ts-node": "~8.6.2",
+    "ts-node": "^8.6.2",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.7"
+    "typescript": "^3.9.7"
   }
 }
